Added the second way of creating menu (OOP); improved the first way of creating menu; improved style of the project

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" type="text/css" href="style_menu.css" />
 </head>
 <body>
+    <h1 class="title">Demo: Using OOP for creating menu (two versions)</h1> 
+    <div class="main">
+        <div id="menu-1" class="menuContainer"></div>
+        <div id="menu-2" class="menuContainer"></div>
+    </div>
+
     <script src="code_menu.js"></script>
+    <script src="code_question.js"></script>
 </body>
 </html>
